bought, remaining, percentage

--- a/javascripts/templates/items.hbs
+++ b/javascripts/templates/items.hbs
@@ -10,4 +10,5 @@
     </li>
   {{/each}}
 </ul>
-<p>{{totalItems}} total items</p>
+<p>{{itemStatement}} (bought: {{boughtItems}}, remaining: {{remainingItems}})</p>
+<progress max='100' {{bind-attr value='progress'}}></progress>
