--- a/javascripts/templates/items.hbs
+++ b/javascripts/templates/items.hbs
@@ -1,7 +1,7 @@
 {{input id='new-item' type='text' value=itemTitle action='createItem' placeholder='What do we need to buy?' }}
 <h3>Items</h3>
 <ul>
-  {{#each itemController='item'}}
+  {{#each unboughtItems itemController='item'}}
     <li class='item'>
     <button {{action 'decrementQuantity'}}{{bind-attr disabled=quantityIsZero}}>-</button>
       <button {{action 'incrementQuantity'}}>+</button>
@@ -9,6 +9,24 @@
       <button {{action 'deleteItem'}}>Delete</button>
     </li>
   {{/each}}
+  {{#if noItems}}<p>Let&rsquo;s go shopping!</p>{{/if}}
+  {{#if allItemsBought}}<p>Great job! You&rsquo;re done!{{/if}}
 </ul>
-<p>{{itemStatement}} (bought: {{boughtItems}}, remaining: {{remainingItems}})</p>
+
+{{#if anyBoughtItems}}
+  <h4>Bought</h4>
+  <ul>
+    {{#each boughtItems itemController='item'}}
+      <li>
+        <span {{bind-attr class="isBought:bought"}}>{{#view App.ItemView}}{{displayTitle}}{{/view}}</span>
+      </li>
+    {{else}}
+      <p>You have not yet bought anything.</p>
+    {{/each}}
+  </ul>
+{{/if}}
+
+<p>{{itemStatement}} (bought: {{boughtItemsCount}}, remaining: {{remainingItems}})</p>
 <progress max='100' {{bind-attr value='progress'}}></progress>
+<button {{action 'clearBought'}}>Clear Bought</button>
+<button {{action 'clearAll'}}>Clear All</button>
