--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 ::-webkit-input-placeholder {
   color: #cecece; }
 
+/* Disable certain interactions on touch devices */
+body {
+  -webkit-text-size-adjust: none;
+  -webkit-user-select: none; }
+
 body {
   margin: 0;
   padding: 0;
