--- a/css/style.sass
+++ b/css/style.sass
@@ -7,6 +7,11 @@ $orange: rgb(246, 133, 34)
 ::-webkit-input-placeholder
   color: #cecece
 
+/* Disable certain interactions on touch devices */
+body
+  -webkit-text-size-adjust: none
+  -webkit-user-select: none
+
 
 body
   margin: 0
